--- a/src/client/pages/main_page/main_page.module.scss
+++ b/src/client/pages/main_page/main_page.module.scss
@@ -7,14 +7,31 @@ body {
 .pageRoot {
 	padding: 1rem;
 	padding-right: 0;
+	padding-bottom: 0;
 	display: flex;
 	flex-direction: row-reverse;
 	align-items: stretch;
+	max-height: 100vh;
 
 	.settingsColumn {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+		justify-content: flex-start;
+		min-height: 0;
+		flex: 1 1 0;
+
 		width: 20vw;
 		max-width: 35rem;
 		min-width: 20rem;
+
+		.settingsColumnScrollablePart {
+			overflow-y: auto;
+			flex: 1 1 0;
+			// this padding just to ensure user that he's scrolled to the very bottom
+			padding-bottom: 10rem;
+			mask-image: linear-gradient(to top, rgba(0,0,0,0) 0, rgba(0,0,0,1) 3rem, rgba(0,0,0,1) 100%);
+		}
 	}
 	
 	.generationColumn {
@@ -45,6 +62,7 @@ body {
     flex-basis: 0;
     min-height: 0px;
     overflow-y: auto;
+	mask-image: linear-gradient(to top, rgba(0,0,0,0) 0, rgba(0,0,0,1) 3rem, rgba(0,0,0,1) 100%);
 }
 
 .mainPageSwitchPanel {
